--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,16 +15,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'  # Set the Node.js version you need
 
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Install dependencies
+        run: npm install  # Install project dependencies
 
-      - name: Install dependencies and build
-        run: |
-          npm install  # Install dependencies
-          npm install --save-dev @rollup/plugin-typescript tslib
-          npm run build  # Run npm build script
+      - name: Install rollup as dev dependency
+        run: npm install --save-dev rollup @rollup/plugin-typescript tslib
+
+      - name: Build project
+        run: npm run build  # Run your build script
