--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist 
-          publish_branch: gh-pages 
-
+          publish_dir: ./dist  # Adjust this to the actual directory where your built files are located
+          publish_branch: gh-pages  # Specify the branch to deploy to
