--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ GH_TOKEN }}
           publish_dir: ./dist  # Adjust this to the actual directory where your built files are located
           publish_branch: gh-pages  # Specify the branch to deploy to
