--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@ name: CI
 on:
   push:
     branches:
-      - main  # Adjust to your main branch name
+      - main  
   pull_request:
     branches:
-      - main  # Adjust to your main branch name
+      - main 
   workflow_dispatch:
 
 jobs:
@@ -17,14 +17,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '14' 
+
       - name: Install dependencies and build
         run: |
-          npm install --save-dev rollup 
+          npm install
           npm run build  # Run npm build script
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GH_TOKEN }}
-          publish_dir: ./dist  # Adjust this to the actual directory where your built files are located
-          publish_branch: gh-pages  # Specify the branch to deploy to
+          publish_dir: ./dist  
+          publish_branch: gh-pages
