--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CI
 on:
   push:
     branches:
-      - main  
+      - main 
   pull_request:
     branches:
       - main 
@@ -17,19 +17,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '14' 
-
       - name: Install dependencies and build
         run: |
-          npm install
-          npm run build  # Run npm build script
+          npm install --save-dev rollup 
+          npm run build 
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GH_TOKEN }}
-          publish_dir: ./dist  
-          publish_branch: gh-pages
+          publish_dir: ./dist 
+          publish_branch: gh-pages 
