--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^26.0.1",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.6",
-    "install": "^0.13.0",
-    "npm": "^10.8.1",
-    "rollup": "^2.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.6.3"
-  },
+  "name": "portfolio",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "rollup -c rollup.config.mjs"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-check",
+    "lint": "eslint .",
+    "deploy": "npx gh-pages -d dist"
   },
-  "dependencies": {
-    "@types/date-fns": "^2.6.0",
-    "date-fns": "^3.6.0",
-    "dayjs": "^1.11.11",
-    "rollup-plugin-typescript": "^1.0.1"
+  "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "@tsconfig/svelte": "^5.0.4",
+    "eslint": "^9.6.0",
+    "svelte": "^4.2.18",
+    "svelte-check": "^3.8.4",
+    "tslib": "^2.6.3",
+    "typescript": "^5.2.2",
+    "vite": "^5.3.1"
   }
 }
