--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@tsconfig/svelte": "^5.0.4",
     "eslint": "^9.6.0",
+    "gh-pages": "^6.1.1",
     "svelte": "^4.2.18",
     "svelte-check": "^3.8.4",
     "tslib": "^2.6.3",
