--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "eslint .",
-		"deploy": "npx gh-pages -d dist"
+		"deploy": "npx gh-pages -d dist",
+		"lint": "eslint 'src/**/*.{js,jsx,ts,tsx,svelte}'",
+		"format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,svelte,json,css,md}'",
+		"lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,svelte}'",
+		"format:check": "prettier --check 'src/**/*.{js,jsx,ts,tsx,svelte,json,css,md}'"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.6.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"eslint": "^9.6.0",
+		"eslint": "^8.56.0",
 		"globals": "^15.8.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
