--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,7 +2,7 @@
     "tabWidth": 2,
     "semi": false,
     "singleQuote": true,
-    "trailingComma": "es6",
+    "trailingComma": "all",
     "plugins": [
         "prettier-plugin-svelte"
     ]
