--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"deploy": "npx gh-pages -d dist",
-		"lint": "eslint 'src/**/*.{js,jsx,ts,tsx,svelte}'",
-		"format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,svelte,json,css,md}'",
-		"lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,svelte}'",
-		"format:check": "prettier --check 'src/**/*.{js,jsx,ts,tsx,svelte,json,css,md}'"
+		"lint": "eslint src",
+		"format": "prettier --write src",
+		"lint:fix": "eslint --fix src",
+		"format:check": "prettier --check src"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.6.0",
@@ -20,7 +20,7 @@
 		"@sveltejs/adapter-node": "^5.2.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"eslint": "^8.56.0",
+		"eslint": "^8.57.0",
 		"globals": "^15.8.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
@@ -29,5 +29,9 @@
 		"typescript-eslint": "^7.15.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.5"
+	}
 }
