--- a/src/assets/tsconfig.json
+++ b/src/assets/tsconfig.json
@@ -10,10 +10,6 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": false
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
