--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
 	"name": "portfolio",
 	"version": "0.0.1",
 	"private": true,
+	"engines": {
+		"node": ">=14.0.0",
+		"npm": ">=6.0.0"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
