--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "0.0.1",
 	"private": true,
 	"engines": {
-		"node": ">=14.0.0",
-		"npm": ">=6.0.0"
+		"node": "v20.15.0",
+		"npm": "10.8.2"
 	},
 	"scripts": {
 		"dev": "vite dev",
