--- a/package.json
+++ b/package.json
@@ -1,39 +1,36 @@
 {
-	"name": "portfolio",
+	"name": "myportfolio",
 	"version": "0.0.1",
 	"private": true,
-	"engines": {
-		"node": "v20.15.0",
-		"npm": "10.8.2"
-	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"deploy": "npx gh-pages -d dist",
-		"lint": "eslint src",
-		"format": "prettier --write src",
-		"lint:fix": "eslint --fix src",
-		"format:check": "prettier --check src"
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/adapter-node": "^5.2.0",
+		"@sveltejs/adapter-auto": "^3.2.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"globals": "^15.8.0",
+		"@types/eslint": "^8.56.7",
+		"eslint": "^9.0.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.36.0",
+		"globals": "^15.0.0",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"typescript-eslint": "^7.15.0",
+		"typescript-eslint": "^8.0.0-alpha.20",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
-		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.5"
+		"@sveltejs/adapter-node": "^5.2.0"
 	}
 }
