--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
-  "devDependencies": {
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.6",
-    "install": "^0.13.0",
-    "npm": "^10.8.1",
-    "tslib": "^2.6.3"
-  },
-  "scripts": {
-    "build": "rollup -c rollup.config.mjs"
-  },
-  "dependencies": {
-    "@types/date-fns": "^2.6.0",
-    "date-fns": "^3.6.0"
-  }
+	"name": "myportfolio",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"deploy": "npx gh-pages -d dist"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^3.2.2",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"svelte": "^4.2.7",
+		"svelte-check": "^3.6.0",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^5.0.3"
+	},
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-node": "^5.2.0"
+	}
 }
